@@ -64,7 +64,7 @@ TRIGDEC HLT_mu26_imedium HLT_mu50 HLT_e26_lhtight_iloose HLT_e60_lhmedium
 
 SELECTION loose
 INITIAL
-COUNTHISTO
+#COUNTHISTO
 GRL
 GOODCALO
 JETCLEAN LooseBad
